fixed the alignment of the bars in the bar graph

--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -259,23 +259,26 @@
     display: flex;
     align-items: center;
     padding: 5px 0;
+    gap:10px;
 
 }
 
 .rating-face {
     width: 30px;
     height: 30px;
-    margin-right: 15px;
+    margin-right: 10px;
+    flex-shrink: 0;
    
 
 }
 
 .rating-label {
-    font-size: 1rem;
-    width: 70px;
-    margin-right: 15px;
+    font-size: 1.2rem;
+    width: 100px;
+    margin-right: -15px;
     color: #333;
     text-align: left;
+    flex-shrink: 0;
     
 }
 
@@ -283,13 +286,15 @@
 .rating-bar {
     width: 100%;
     height:20px;
-    flex-grow:1;
+   
     background-color: #d3d3d3; /* Grey background */
-    height: 20px;
+    
     border-radius: 5px;
     overflow: hidden;
     position: relative;
     border-radius: 5px;
+    left:15px;
+    
     
 }
 
